objects/License_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Snapshot</relationshipLabel>
        <relationshipName>License_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Perpetual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non Perpetual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perpetual__c</fullName>
        <label>Perpetual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductVersion__c</fullName>
        <label>Product Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category_Version__c</fullName>
        <formula>ProductCategory__c + &apos; &apos; + ProductVersion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Part_Number__c</fullName>
        <formula>Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>License Snapshot</relationshipLabel>
        <relationshipName>License_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_End_User_Part_Number__c</fullName>
        <externalId>true</externalId>
        <label>Sold To + End User + Part Number</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Snapshot (Sold To)</relationshipLabel>
        <relationshipName>License_Snapshot1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Perpetual__c + Non_Perpetual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isMirrored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMirrored</label>
        <type>Checkbox</type>
    </fields>
    <label>License Snapshot</label>
    <nameField>
        <displayFormat>LS-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Snapshot</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>